@@ -1,5 +1,6 @@
 Version 0.4.30
 --------------
++ New MemoryUtils.h functions for SSE2 memcpy
 x int128: was not compiling on Cygwin
 
 Version 0.4.29, 2013-05-13
